Better colors, Better component isolation.

--- a/packages/colors/src/colors.css
+++ b/packages/colors/src/colors.css
@@ -1,4 +1,9 @@
 :root {
+  --color-request: var(--color-indigo);
+  --color-quote: var(--color-pink);
+  --color-job: var(--color-yellowGreen);
+  --color-invoice: var(--color-purple);
+
   --color-blue: rgb(1, 41, 57);
   --color-blue--light: rgb(77, 105, 116);
   --color-blue--lighter: rgb(153, 169, 176);
