--- a/packages/components/src/Typography/css/Typography.css
+++ b/packages/components/src/Typography/css/Typography.css
@@ -73,6 +73,8 @@
 :root {
   --fontFamily-normal: "Source Sans Pro", Helvetica, Arial, sans-serif;
   --fontFamily-display: "Poppins", Helvetica, Arial, sans-serif;
+
+  --textColor: var(--color-blue);
 }
 
 /* -------------------------------------------------------------------------
@@ -82,6 +84,7 @@
 .base {
   margin: 0;
   padding: 0;
+  color: var(--textColor);
   font-size: var(--font-size, var(--base-unit));
   font-weight: var(--font-weight, 400);
   line-height: var(--line-height, 1.25);
