remove defaults and add more supported tags

--- a/packages/components/src/Typography/css/Typography.css
+++ b/packages/components/src/Typography/css/Typography.css
@@ -85,7 +85,7 @@
   margin: 0;
   padding: 0;
   color: var(--textColor);
-  font-size: var(--font-size, var(--base-unit));
-  font-weight: var(--font-weight, 400);
-  line-height: var(--line-height, 1.25);
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  line-height: var(--line-height);
 }
