use semantic tags and remove underline

--- a/packages/components/src/Typography/css/Emphasis.css
+++ b/packages/components/src/Typography/css/Emphasis.css
@@ -2,17 +2,13 @@
   font-style: italic;
 }
 
-.underline {
-  text-decoration: underline;
-}
-
 .highlight {
   margin-left: calc(-1 * var(--space-smaller));
   padding: 0 var(--space-smaller);
   background-image: linear-gradient(
     to left,
-    var(--color-green--light),
-    var(--color-green--light)
+    var(--color-green--lighter),
+    var(--color-green--lighter)
   );
   background-position: left 75%;
   background-repeat: repeat-x;
