--- a/packages/components/src/Typography/css/Emphasis.css
+++ b/packages/components/src/Typography/css/Emphasis.css
@@ -5,6 +5,7 @@
 .highlight {
   margin-left: calc(-1 * var(--space-smaller));
   padding: 0 var(--space-smaller);
+  font-family: var(--fontFamily-display);
   background-image: linear-gradient(
     to left,
     var(--color-green--lighter),
