--- a/packages/components/src/Typography/css/Typography.css
+++ b/packages/components/src/Typography/css/Typography.css
@@ -1,87 +1,27 @@
-/* -------------------------------------------------------------------------
-   Source Sans Pro Font
-   ------------------------------------------------------------------------- */
+@import url("https://fonts.googleapis.com/css?family=Poppins:800,900|Source+Sans+Pro:400,400i,700,700i&display=swap");
 
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Source Sans Pro Regular"), local("SourceSansPro-Regular"),
-    url("../fonts/source-sans-pro-v12-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/source-sans-pro-v12-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 400;
-  src: local("Source Sans Pro Italic"), local("SourceSansPro-Italic"),
-    url("../fonts/source-sans-pro-v12-latin-italic.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/source-sans-pro-v12-latin-italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Source Sans Pro Bold"), local("SourceSansPro-Bold"),
-    url("../fonts/source-sans-pro-v12-latin-700.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/source-sans-pro-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 700;
-  src: local("Source Sans Pro Bold Italic"), local("SourceSansPro-BoldItalic"),
-    url("../fonts/source-sans-pro-v12-latin-700italic.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/source-sans-pro-v12-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* -------------------------------------------------------------------------
-   Poppins Font
-   ------------------------------------------------------------------------- */
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 800;
-  src: local("Poppins ExtraBold"), local("Poppins-ExtraBold"),
-    url("../fonts/poppins-v6-latin-800.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/poppins-v6-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 900;
-  src: local("Poppins Black"), local("Poppins-Black"),
-    url("../fonts/poppins-v6-latin-900.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/poppins-v6-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* -------------------------------------------------------------------------
-   Variables
-   ------------------------------------------------------------------------- */
-
-:root {
+.base {
   --fontFamily-normal: "Source Sans Pro", Helvetica, Arial, sans-serif;
   --fontFamily-display: "Poppins", Helvetica, Arial, sans-serif;
 
   --textColor: var(--color-blue);
-}
+  --fontSize-unit: var(--base-unit);
 
-/* -------------------------------------------------------------------------
-   Base Style
-   ------------------------------------------------------------------------- */
+  --fontSize-extravagant: calc((var(--fontSize-unit)) * 3); /* 48 */
+  --fontSize-jumbo: calc((var(--fontSize-unit)) * 2.25); /* 36 */
+  --fontSize-largest: calc((var(--fontSize-unit)) * 1.5); /* 24 */
+  --fontSize-larger: calc((var(--fontSize-unit)) * 1.25); /* 20 */
+  --fontSize-large: calc((var(--fontSize-unit)) * 1.125); /* 18 */
+  --fontSize-base: calc((var(--fontSize-unit)) * 1); /* 16 */
+  --fontSize-small: calc((var(--fontSize-unit)) * 0.875); /* 14 */
 
-.base {
+  --lineHeight-large: 1.33;
+  --lineHeight-base: 1.25;
+  --lineHeight-tight: 1.2;
+  --lineHeight-tighter: 1.14;
+  --lineHeight-tightest: 1.11;
+  --lineHeight-miniscule: 1.08;
+
   margin: 0;
   padding: 0;
   color: var(--textColor);
