--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -8,11 +8,12 @@
 
   display: block;
   padding: var(--base-padding);
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
+  border: var(--border-base) solid var(--border-color);
+  border-radius: var(--radius-base);
   overflow: auto;
   background-color: var(--card-background-color);
 }
+
 .card:not(:last-child) {
   margin-bottom: var(--space-base);
 }
