--- a/packages/components/src/Switch/Switch.css
+++ b/packages/components/src/Switch/Switch.css
@@ -1,22 +1,36 @@
-.track {
-  display: inline-block;
-  position: relative;
-  height: 24px;
-  min-width: 48px;
-  border: 2px solid var(--color-grey--lighter);
-  border-radius: 2px;
-  cursor: pointer;
+.track,
+.track * {
+  box-sizing: border-box;
 }
 
-.checkbox {
-  display: none;
+.track {
+  display: inline-flex;
+  position: relative;
+  min-height: 16px;
+  padding: 0 var(--space-smaller);
+  border: 1px solid var(--color-grey--lighter);
+  border-radius: 24px;
+  line-height: normal;
+  background-color: var(--color-grey--lightest);
+  cursor: pointer;
+  transition: all 200ms;
+  appearance: none;
+  flex: 1 1 100%;
+  align-items: center;
+}
+
+.track:focus {
+  box-shadow: 0 0px 4px 1px var(--color-yellow--light);
+  outline: none;
 }
 
 .label {
-  width: 50%;
-  min-width: 48px;
-  padding: 0 12px;
+  position: relative;
+  flex-basis: 100%;
+  min-width: 24px;
+  padding: var(--space-smallest) var(--space-small);
   text-align: center;
+  user-select: none;
 }
 
 .pip {
@@ -26,13 +40,19 @@
   bottom: 0;
   left: 0;
   width: 50%;
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.0980392),
-    0px 4px 12px 0px rgba(0, 0, 0, 0.0470588);
-  outline: 1px solid var(--color-grey);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 4px 16px rgba(0, 0, 0, 0.05);
+  border: 1px solid var(--color-grey);
+  border-radius: 24px;
   background-color: var(--color-white);
-  transition: left 200ms;
+  transition: all 200ms;
+}
+
+.isChecked {
+  border-color: var(--color-green);
+  background-color: var(--color-green);
 }
 
 .isChecked .pip {
   left: 50%;
+  border-color: var(--color-green);
 }
