Add some options to Card so we can replace the interim component we have in Jobber core. (#60)
* Shadow and Timing constants.

* Cards can now be clickable.

* Fix header.

* href to url

* Clickable specs

* Don't need the `Card` prefix all over here.

  * Thanks for reminding me of this Craig.

* wip PR comments / new theme

* Better tabbing

* focus ≠ outline

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -4,6 +4,8 @@
   --color-job: var(--color-yellowGreen);
   --color-invoice: var(--color-purple);
 
+  --color-outline: var(--color-yellow--light);
+
   --color-blue: rgb(1, 41, 57);
   --color-blue--light: rgb(77, 105, 116);
   --color-blue--lighter: rgb(153, 169, 176);
