--- a/packages/components/src/Switch/Switch.css
+++ b/packages/components/src/Switch/Switch.css
@@ -18,7 +18,7 @@
   width: inherit;
   height: inherit;
   padding: 0;
-  border: 1px solid var(--color-grey--lighter);
+  border: var(--border-base) solid var(--color-grey--lighter);
   border-radius: calc(var(--pipSize) / 2);
   overflow: hidden;
   line-height: normal;
@@ -28,7 +28,7 @@
 }
 
 .toggle:focus {
-  box-shadow: 0 0px 4px 1px var(--color-yellow--light);
+  box-shadow: 0 0 4px 1px var(--color-yellow--light);
   outline: none;
 }
 
@@ -70,7 +70,7 @@
   flex: 0 0 auto;
   width: calc(var(--pipSize) - 2px);
   height: calc(var(--pipSize) - 2px);
-  border: 1px solid var(--color-grey);
+  border: var(--border-base) solid var(--color-grey);
   border-radius: calc(var(--pipSize) / 2);
   background-color: var(--color-white);
   transition: all 200ms;
