add sizes and modal  cleanup

--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -1,39 +1,38 @@
-.modal {
-  --card-background-color: var(--color-white);
+.container {
+  --modal-width: calc(var(--base-unit) * 37.5);
+  --modal-padding: var(--space-base) var(--space-large);
+  --modal-background-color: var(--color-white);
   --header-background-color: var(--color-grey--lightest);
   --border-color: var(--color-grey--lighter);
-  --base-padding: var(--space-base) var(--space-large);
 
   display: flex;
-
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  /* TODO: Find a way to overcome docz z-index */
-  z-index: 10001;
+  z-index: 10001; /* TODO: Find a way to overcome docz z-index */
   padding: var(--space-base);
   overflow: auto;
   flex: 1 1 auto;
 }
 
-.box {
+.modal {
   position: relative;
   flex: 1 1 auto;
-  max-width: 600px;
+  max-width: var(--modal-width);
   margin: auto;
   border: var(--border-base) solid var(--border-color);
   border-radius: var(--radius-base);
   outline-color: var(--color-outline);
-  background-color: var(--card-background-color);
+  background-color: var(--modal-background-color);
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--base-padding);
+  padding: var(--modal-padding);
   background-color: var(--header-background-color);
 }
 
@@ -46,7 +45,7 @@
 }
 
 .content {
-  padding: var(--base-padding);
+  padding: var(--modal-padding);
 }
 
 .overlay {
@@ -56,4 +55,5 @@
   bottom: 0;
   left: 0;
   background-color: var(--color-greyBlue);
+  opacity: 0.8;
 }
