--- a/packages/components/src/Switch/Switch.css
+++ b/packages/components/src/Switch/Switch.css
@@ -33,10 +33,11 @@
 
 .toggle {
   display: flex;
+  position: relative;
+  pointer-events: none;
+  transform: translateX(calc(-1 * var(--labelWidth)));
   flex: 1 1 100%;
   align-items: center;
-  position: relative;
-  transform: translateX(calc(-1 * var(--labelWidth)));
 }
 
 .isChecked .toggle {
