adjust typography size and line height

--- a/packages/components/src/Typography/css/FontSizes.css
+++ b/packages/components/src/Typography/css/FontSizes.css
@@ -31,3 +31,8 @@
   --font-size: var(--fontSize-small);
   --line-height: var(--lineHeight-tighter);
 }
+
+.smaller {
+  --font-size: var(--fontSize-smaller);
+  --line-height: var(--lineHeight-tight);
+}
