--- a/packages/components/src/Icon/Icon.css
+++ b/packages/components/src/Icon/Icon.css
@@ -13,6 +13,8 @@
   /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
   font-family: "jobbericons" !important;
 
+  font-size: var(--size);
+
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
