change cursor to not allowed for extra semantic meaning

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -80,7 +80,7 @@
 .disabled {
   --buttonColor: var(--color-grey--lighter);
   --hoverColor: var(--color-grey--lighter);
-  cursor: no-drop;
+  cursor: not-allowed;
 }
 
 /* Sizes */
